[package]
name = "nucleus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
anyhow = "1.0.58"
async-std = "1.12.0"
futures = "0.3.21"
lazy_static = "1.4.0"
libarchive = "0.1.1"
libarchive3-sys = "0.1.2"
log = "0.4.17"
mime = "0.3.16"
reqwest = "0.11.11"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"

[dependencies.tokio]
version = "1.20.1"
features = [
    "bytes",
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "tokio-macros",
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]
