[package]
name = "native-planet-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
async-std = "1.12.0"
async-trait = "0.1.56"
futures = "0.3.21"
lazy_static = "1.4.0"
libarchive = "0.1.1"
log = "0.4.17"
serde_json = "1.0.82"
sha2 = "0.10.2"
generic-array = "0.14.5"
pin-project-lite = "0.2.9"
regex = "1.6.0"
actix-multipart = "0.4.0"

[dependencies.reqwest]
version = "0.11.11"
features = [
    "__tls",
    "default-tls",
    "gzip",
    "hyper-tls",
    "json",
    "native-tls-crate",
    "serde_json",
    "stream",
    "tokio-native-tls",
]

[dependencies.serde]
version = "1.0.140"
features = [
    "derive"
]

[dependencies.tokio]
version = "1.20.1"
features = [
    "bytes",
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "tokio-macros",
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]
